--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -67,7 +67,6 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
-allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -100,6 +99,9 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 109.71.252.182;
+allow 109.71.252.88;
+allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.35.245.150;
 allow 118.163.74.160;
@@ -132,6 +134,7 @@ allow 141.164.38.67;
 allow 141.98.11.62;
 allow 142.44.133.81;
 allow 144.126.133.74;
+allow 144.172.84.103;
 allow 146.59.126.232;
 allow 146.59.231.4;
 allow 147.45.116.145;
@@ -638,6 +641,7 @@ allow 198.98.48.33;
 allow 198.98.48.35;
 allow 198.98.50.199;
 allow 198.98.51.189;
+allow 198.98.51.249;
 allow 198.98.57.151;
 allow 198.98.57.74;
 allow 198.98.61.60;
@@ -915,6 +919,7 @@ allow 23.137.253.27;
 allow 23.137.254.137;
 allow 23.151.8.8;
 allow 23.155.8.104;
+allow 23.184.48.13;
 allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
@@ -984,11 +989,13 @@ allow 2602:f6f6:2:69ed::1;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cd1f::1;
 allow 2602:f6f6:2:d31a::1;
+allow 2602:fa59:4:246::1;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
+allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
@@ -998,6 +1005,7 @@ allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1362::2;
+allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
 allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1019,7 +1027,6 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
-allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1506,7 +1513,17 @@ allow 2a0e:4005:1002:ffff:185:40:4:38;
 allow 2a0e:4005:1002:ffff:185:40:4:44;
 allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
+allow 2a0e:97c0:3e3:460:1337:b00b:1337:1;
+allow 2a0e:97c0:3e3:460:1337:b01b:1337:2;
+allow 2a0e:97c0:3e3:460:1337:b02b:1337:3;
+allow 2a0e:97c0:3e3:460:1337:b03b:1337:4;
+allow 2a0e:97c0:3e3:460:1337:b04b:1337:5;
+allow 2a0e:97c0:3e3:460:1337:b10b:1337:8;
+allow 2a0e:97c0:3e3:460:1337:b30b:1337:10;
+allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
+allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
+allow 2a0e:97c0:3ea:882::1;
 allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
@@ -1623,6 +1640,11 @@ allow 31.184.236.104;
 allow 31.42.177.222;
 allow 31.44.238.25;
 allow 35.0.127.52;
+allow 37.114.50.124;
+allow 37.114.50.142;
+allow 37.114.50.18;
+allow 37.114.50.27;
+allow 37.114.63.5;
 allow 37.120.239.59;
 allow 37.187.5.192;
 allow 37.221.208.71;
@@ -1649,8 +1671,11 @@ allow 45.11.59.28;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
+allow 45.13.225.69;
+allow 45.13.225.78;
 allow 45.133.74.53;
 allow 45.134.225.36;
+allow 45.137.70.158;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.161;
@@ -1777,6 +1802,7 @@ allow 51.38.225.46;
 allow 51.81.222.62;
 allow 5.181.80.107;
 allow 5.196.95.34;
+allow 5.253.247.27;
 allow 5.255.100.219;
 allow 5.255.101.10;
 allow 5.255.101.131;
@@ -1882,7 +1908,6 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
-allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
