--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -67,7 +67,6 @@ set_real_ip_from 107.189.4.12;
 set_real_ip_from 107.189.4.209;
 set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.188;
-set_real_ip_from 107.189.5.249;
 set_real_ip_from 107.189.5.7;
 set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.7.141;
@@ -474,14 +473,15 @@ set_real_ip_from 185.246.188.149;
 set_real_ip_from 185.246.188.73;
 set_real_ip_from 185.246.188.74;
 set_real_ip_from 185.246.189.140;
+set_real_ip_from 185.246.189.147;
 set_real_ip_from 185.246.189.99;
 set_real_ip_from 185.246.84.179;
 set_real_ip_from 185.247.184.105;
 set_real_ip_from 185.247.184.33;
 set_real_ip_from 185.247.226.175;
-set_real_ip_from 185.247.226.95;
 set_real_ip_from 185.252.232.218;
 set_real_ip_from 185.254.196.141;
+set_real_ip_from 185.28.47.4;
 set_real_ip_from 185.34.33.2;
 set_real_ip_from 185.35.202.222;
 set_real_ip_from 185.39.207.83;
@@ -1029,7 +1029,6 @@ set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
-set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1293,7 +1292,6 @@ set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:47::166;
 set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:2:148::8493:bcd8;
-set_real_ip_from 2a06:1700:2:188::6e0b:ebd9;
 set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
@@ -1522,11 +1520,11 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b02b:1337:3;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b03b:1337:4;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b04b:1337:5;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b10b:1337:8;
+set_real_ip_from 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
 set_real_ip_from 2a0e:97c0:3e3:b6::1;
-set_real_ip_from 2a0e:97c0:3ea:882::1;
 set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
@@ -1678,7 +1676,6 @@ set_real_ip_from 45.13.225.69;
 set_real_ip_from 45.13.225.78;
 set_real_ip_from 45.133.74.53;
 set_real_ip_from 45.134.225.36;
-set_real_ip_from 45.137.70.158;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.161;
@@ -1792,7 +1789,6 @@ set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 46.250.243.29;
-set_real_ip_from 46.30.188.218;
 set_real_ip_from 46.38.243.210;
 set_real_ip_from 50.7.40.39;
 set_real_ip_from 5.101.84.151;
@@ -1896,6 +1892,7 @@ set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.226.13;
 set_real_ip_from 84.239.46.144;
+set_real_ip_from 84.38.130.33;
 set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.90.196.47;
 set_real_ip_from 85.93.218.204;
@@ -1911,7 +1908,6 @@ set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
 set_real_ip_from 88.80.26.4;
-set_real_ip_from 89.110.95.200;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
@@ -1969,6 +1965,7 @@ set_real_ip_from 94.230.208.148;
 set_real_ip_from 94.72.103.33;
 set_real_ip_from 94.72.104.135;
 set_real_ip_from 94.74.164.89;
+set_real_ip_from 94.74.164.94;
 set_real_ip_from 94.75.225.81;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.143.193.125;
